tests/parser/parser-first.swg
} // expected-error ParserUnexpectedToken
{ // expected-error ParserUnterminatedCurlyBlock